--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="icon" type="img" href="images/mountainpng.png">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="styles/index.css">
 </head>
+
 <header>
-  <nav class="navbar bg-body-tertiary" style="background-color: rgb(213, 237, 218);">
+  <nav class="navbar bg-body-tertiary">
     <div class="container">
-      <a class="navbar-brand" href="#">
-        <img src="images/mountainpng.png" alt="Logo" width="50" height="35" class="d-inline-block">
+      <a class="navbar-brand" href="index.html">
+        <img src="images/mountainpng.png" alt="Logo" width="50" height="35" class="d-inline-block align-text-top">
         GreenGaze
       </a>
     </div>
