--- a/Mountain Search/mountainSearch.html
+++ b/Mountain Search/mountainSearch.html
@@ -7,7 +7,7 @@
   <title>GreenGaze</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles/parks.css">
+  <link rel="stylesheet" href="parks.css">
 </head>
 
 <body>
@@ -25,23 +25,17 @@
     </header>
 
     <div class="container">
-      <h1 style="color: white;">National Parks Search:</h1>
-      <h5 style="margin-top: 10px; color: white">Search by Location</h5>
-      <select id="locationDropdown">
-        <option value="" selected>Choose a location</option>
-      </select><br>
-
-      <h5 style="margin-top: 10px; color: white">Search by Park Type</h5>
-      <select id="parkTypeDropdown">
-        <option value="" selected>Choose a park type</option>
+      <h1 style="color: white;">Mountains Info</h1>
+      <h5 style="margin-top: 10px; color: white">Search our Mountains:</h5>
+      <select id="mtnDropdown">
+        <option value="" selected>Choose</option>
       </select><br>
       <button id="searchBtn">search</button>
     </div>
 
   </div>
 
-
-  <div id="parkSearchContainer" class="accordion accordion-flush">
+  <div id="mtnSearchContainer" class="accordion accordion-flush">
   </div>
 
 
@@ -57,11 +51,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
+    
+    <script src="scripts/mountainData.js"></script>
+    <script src="scripts/mountainSearch.js"></script>
+    <script src="scripts/locationData.js"></script>
 
-  <script src="scripts/locationData.js"></script>
-  <script src="scripts/parkTypeData.js"></script>
-  <script src="scripts/nationalParkData.js"></script>
-  <script src="scripts/searchPark.js"></script>
 </body>
 
 </html>
