--- a/Search Park/index.html
+++ b/Search Park/index.html
@@ -8,12 +8,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="icon" type="img" href="images/mountainpng.png">
-  <link rel="stylesheet" href="styles/index.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 
 <header>
   <nav class="navbar bg-body-tertiary">
-    <div class="container">
+    <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
         <img src="images/mountainpng.png" alt="Logo" width="50" height="35" class="d-inline-block align-text-top">
         GreenGaze
